Implement back unit tests and integration tests