@@ -10,6 +10,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 @Service
 public class SessionService {
@@ -82,7 +84,7 @@ public class SessionService {
                 session.getUsers()
                         .stream()
                         .filter(user -> !user.getId().equals(userId))
-                        .toList());
+                        .collect(Collectors.toList()));
 
         this.sessionRepository.save(session);
     }
